syntax = "proto3";

option java_package = "com.ecommerceapp";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
}

message CreateProductRequest {
  string name = 1;
  double price = 2;
  int32 quantity = 3;
}

message CreateProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}

message GetProductRequest {
  int32 id = 1;
}

message GetProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
  int32 quantity = 4;
}

